system card updates

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -32,12 +32,13 @@
 \begin{tabular*}{\textwidth}{ll@{\extracolsep{\fill}}r}
 1. & 2NT good raise & \pageref{note:1} \\
 2. & Jump fit & \pageref{note:2} \\
+3. & 3NT good raise & \pageref{note:3} \\
 6. & splinter & \pageref{note:6} \\
-7. & 2N enquiry responses & \pageref{note:7} \\
+7. & 2\clubs 5-card puppet Keri & \pageref{note:7} \\
 8. & 3\clubs 5-card puppet Stayman & \pageref{note:8} \\
-8a. & 2\clubs 5-card puppet Keri & \pageref{note:8a} \\
 9. & Responses to a natural 1NT & \pageref{note:9} \\
-10. & 2NT--3\spades & \pageref{note:8} \\
+10. & 2NT--3\spades/3NT & \pageref{note:10} \\
+11. & UCB & \pageref{note:11} \\
 13. & Lebensohl & \pageref{note:13} \\
 14. & Responses to 1\clubs & \pageref{note:14} \\
 15. & Dixon & \pageref{note:15} \\
@@ -45,6 +46,8 @@
 19. & General Swiss & \pageref{note:19} \\
 20. & Suction wriggle & \pageref{note:20} \\
 21. & Aardvark with Halmic redouble & \pageref{note:21} \\
+22. & Roman Key-Quant Gerber & \pageref{note:22} \\
+23. & Viscount & \pageref{note:23} \\
 \end{tabular*}
 
 \newpage
@@ -560,6 +563,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 		\end{itemize}
    \item 2\spades/3\clubs/3\diamonds = fit jump.
    \item 3\spades/4\clubs/\diamonds/ = splinter
+\label{note:3}
 	\item 3NT = good raise to 4 hearts
 	\end{itemize}
 }
@@ -621,7 +625,6 @@ weak takeout.
    \item 2\clubs/\diamonds: weak, to play.
    \item 2\hearts/\spades: preference, to play.
    \item 2NT: forcing enquiry:
-\label{note:7}
 		\begin{itemize}
       \item 3\clubs/\diamonds weak, 3\hearts/\spades strong. 3\clubs/\hearts better \hearts, 3\diamonds/\spades better \spades.
 		\end{itemize}
@@ -952,7 +955,7 @@ pass, or bid 3NT with (e.g.) Kxx in the suit.
 \end{itemize}
 
 \paragraph{Responses to 5-card puppet Keri}
-\label{note:8a}
+\label{note:7}
 
 Because we may have already established a game-force before bidding 1NT and we
 use the principle of fast-arrival some of the ranges vary. In the responses
@@ -1299,6 +1302,7 @@ After interference direct after a non-signoff response to Swiss:
 
 \subsection{Roman Key-Quant Gerber}
 \label{sec:rkqg}
+\label{note:22}
 
 After a NT opening or rebid, 4\clubs is Roman Key-Quant Gerber, asking for
 aces and quantatitive. Responses are:
@@ -1315,6 +1319,7 @@ and bidding kings or 6NT accepting.
 
 \subsection{Viscount}
 \label{sec:viscount}
+\label{note:23}
 
 Since all the quantatitive raises and ace asking go through Gerber (above), 4NT
 is now free. Bidding 4NT over a NT opening or rebid asks opener to bid 4 card
@@ -1330,6 +1335,7 @@ Therefore, we have a fairly natural overcall style.
 \label{sec:def:1x}
 
 \subsubsection{Simple overcalls}
+\label{note:11}
 Simple overcalls are constructive and natural 5 cards, starting at
 10HCP~\orange{11N2}. A responsive cue is a good raise and
 direct raises are preemptive.
