updates post spring fours

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1683,25 +1683,28 @@ After the initial lead we lead high from bad suits and low from good suits.
 \subsection{Signals}
 \label{sec:card:signals}
 
-We play two forms of signalling. On partner's lead we play reverse attitude
-(low encouraging, high discouraging), except if the initial lead was an odd
-card. In that case we play Prism signals in that suit (see below). We also play
-Prism signals when trumps are led by either side, or if there is a suitable
-obvious running suit in no trumps.
+Signals are reverse (low encourages) attitude on partner's lead of the A, Q or
+pip cards and standard count (high even) on K or J leads and on declarer's
+lead.
+
+Carding will frequently be false on declarer's lead.
 
 Leads to ruffs and other obvious situations may be McKenny.
 
 \subsection{Discards}
 \label{sec:card:discards}
 
-Discards are Italian style, so an odd card is encouraging in the suit discarded
-and an even card is McKenny. Thus, low even cards ask for the lower of the
-outside suits and high even cards ask for the higher of the two outside
-suits.
+Discards are a modified Italian style whereby prime (2357JK) discards are
+encouraging and composite discards (4689TQA) are suit-preference
+Lavinthal-style. Thus, low composite cards ask for the lower of the outside
+suits and high even cards ask for the higher of the two outside suits.
 
 \newpage
 \subsection{Prism}
 \label{sec:card:prism}
+
+NOTE: currently we're not using Prism signals since the gain is marginal for the 
+extra thought load and we don't play often enough to keep up with them.
 
 Prism is a signalling system based on the shape of the whole hand. An initial
 hand of 13 cards will, perforce, have either one suit which is odd (and three
