--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -41,9 +41,9 @@
 9. & Responses to a natural 1NT & \pageref{note:9} \\
 10. & 2NT--3\spades/3NT & \pageref{note:10} \\
 11. & UCB & \pageref{note:11} \\
-13. & Lebensohl & \pageref{note:13} \\
-14. & Responses to 1\clubs & \pageref{note:14} \\
-15. & Dixon & \pageref{note:15} \\
+12. & Lebensohl & \pageref{note:12} \\
+13. & Responses to 1\clubs & \pageref{note:13} \\
+14. & Responses to 1\diamonds& \pageref{note:14} \\
 18. & Responses to 2x & \pageref{note:18} \\
 19. & General Swiss & \pageref{note:19} \\
 20. & Suction wriggle & \pageref{note:20} \\
@@ -142,7 +142,7 @@ the extended rule of 25 in all cases.
 \label{sec:resp:1level}
 
 \begin{itemize}
-\label{note:14}
+\label{note:13}
 \item 1\clubs (3\textsuperscript{rd}/4\textsuperscript{th} Non-Vulnerable):
 	\begin{itemize}
    \item 1\diamonds = 0--5, no 6-card suit
@@ -238,6 +238,7 @@ the extended rule of 25 in all cases.
 
 \newpage
 
+\label{note:13}
 \item 1\diamonds:
 	\begin{itemize}
    \item 1\hearts = 0--7 (not AK suited), no 6-card suit.
@@ -562,7 +563,15 @@ weak takeout.
       \item 3\diamonds = weak with \hearts\&\diamonds
       \item 3\hearts = weak with \hearts\&\clubs
       \item 3\spades = GF, \hearts\&\clubs
+			\begin{itemize}
+			\item 4\clubs/\diamonds = General Swiss for \clubs ~\xref{sec:swiss}
+			\item 4NT = RKCB for \hearts ~\xref{sec:rkcb}
+			\end{itemize}
       \item 3NT = GF, \hearts\&\diamonds
+			\begin{itemize}
+			\item 4\clubs/\diamonds = General Swiss for \diamonds ~\xref{sec:swiss}
+			\item 4NT = RKCB for \hearts ~\xref{sec:rkcb}
+			\end{itemize}
 		\end{itemize}
    \item 3\clubs/\diamonds/\hearts, etc = pass or correct
    \item 3\spades = constructive but non-forcing with 5/6 spades
@@ -869,7 +878,7 @@ bids show a two suiter (that suit and a higher) and redouble forces 2\clubs and 
 
 \subsubsection{After direct overcalls of 1NT}
 \label{sec:resp:lebensohl}
-\label{note:13}
+\label{note:12}
 
 Lebensohl:
 
@@ -972,6 +981,10 @@ still of interest.
 
 \section{Slam conventions}
 \label{sec:slam}
+
+If suit agreement isn't possible after a multi-suited bid then (if possible)
+General Swiss agrees the minor (or lower) suit and Blackwood agrees the major
+(or higher) suit.
 
 \subsection{Roman key-card Blackwood (1430)}
 \label{sec:rkcb}
@@ -1359,12 +1372,8 @@ is natural. \orange{11M2}
 \subsubsection{Multi 2\diamonds}
 \label{sec:def:multi}
 
-\label{note:15}
-Dixon \orange{11Q2}:
-
 \begin{itemize}
 \item X: 16+ or 13-15 bal
-\item 2\hearts/\spades: takeout of the other major
 \item 2N: 16-18 bal, stops in both majors.
 	\begin{itemize}
 	\item Responses as ``Continuations after 2NT" \xref{sec:resp:2n}
