blue-book changes

--- a/openings.tex
+++ b/openings.tex
@@ -9,7 +9,7 @@ Responses in Section \ref{sec:resp:1level}.
 
 \paragraph{1\clubs}
 
-One of the following \orange{11C11}:
+One of the following \orange{7B1(i)}:
 
 \begin{itemize}
 \item (1\textsuperscript{st}/2\textsuperscript{nd} non-vul) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
@@ -20,7 +20,7 @@ One of the following \orange{11C11}:
 
 \paragraph{1\diamonds}
 
-16+, not game forcing \orange{11C12}. 
+16+, not game forcing \orange{7B1(ii)}. 
 \begin{itemize}
 \item If balanced or semi-balanced then 16--19 (17--19 1/2 Vul). 
 \item If a two suiter (5422 or longer) or three suiter (4441 / 5440) then 16--GF. 
@@ -32,7 +32,7 @@ One of the following \orange{11C11}:
 \paragraph{1\hearts~(Level 5)}
 
 \begin{itemize}
-\item 10--15 points, not balanced 4+ spades, may be longer hearts or a minor (possible canape), but will always have 5 spades or 4 hearts \orange{11R}.
+\item 10--15 points, not balanced 4+ spades, may be longer hearts or a minor (possible canape), but will always have 5 spades or 4 hearts \orange{9A}.
 \end{itemize}
 
 }
@@ -42,7 +42,7 @@ One of the following \orange{11C11}:
 \paragraph{1\hearts~(Level 4)}
 
 \begin{itemize}
-\item 10--15 points, not balanced, 4+ hearts, may contain a longer minor (possible canape) \orange{11C15}.
+\item 10--15 points, not balanced, 4+ hearts, may contain a longer minor (possible canape) \orange{7B2}.
 \end{itemize}
 }
 
@@ -51,7 +51,7 @@ One of the following \orange{11C11}:
 \paragraph{1\spades~(Level 5)}
 
 \begin{itemize}
-\item 10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11R}, may have a longer minor (possible canape).
+\item 10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{9A}, may have a longer minor (possible canape).
 \end{itemize}
 
 }
@@ -61,32 +61,32 @@ One of the following \orange{11C11}:
 \paragraph{1\spades~(Level 4)}
 
 \begin{itemize}
-\item 10--15 points, not balanced. 5+ spades \orange{11C15}, may have a longer minor (possible canape).
+\item 10--15 points, not balanced. 5+ spades \orange{7B2}, may have a longer minor (possible canape).
 \end{itemize}
 }
 
 \paragraph{1NT}
 
-Varies depending upon position and vulnerability \orange{10A8}
+Varies depending upon position and vulnerability \orange{5A5}
 
 First or second seat non-vulnerable:
 \begin{itemize}
-\item 9--11 balanced \orange{11F3}.
+\item 9--11 balanced \orange{7B3(i)}.
 \end{itemize}
 
 Third seat non-vulnerable:
 \begin{itemize}
-\item 9--15 balanced \orange{11F3}.
+\item 9--15 balanced \orange{7B3(i)}.
 \end{itemize}
 
 First or second seat vulnerable:
 \begin{itemize}
-\item 14--16 balanced \orange{11F3}.
+\item 14--16 balanced \orange{7B3(i)}.
 \end{itemize}
 
 All other positions and vulnerabilities:
 \begin{itemize}
-\item 12--15 balanced \orange{11F3}.
+\item 12--15 balanced \orange{7B3(i)}.
 \end{itemize}
 
 For responses see Section~\ref{sec:resp:1nnat}.
@@ -101,43 +101,43 @@ is given, but may be wider ranging in 3rd or favourable vulnerability and will
 be intermediate in 4th position (12--16).
 
 \paragraph{2\clubs}
-One of the following \orange{11G10}:
+One of the following \orange{7C1(a) \& (b)(iv)}:
 \begin{itemize}
 \item Weak (5--9) with \diamonds (usually 6 cards)
-\item Weak (5--9) with \hearts \& \spades, 4--4 or better (usually 5--4)
+\item Weak (5--9) with \hearts \& \spades, 5--4 or better
 \item 20--23 balanced
-\item Game forcing (3 losers) with \hearts \& \spades, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with \hearts \& \spades, 5--4 or better
 \end{itemize}
 
 \paragraph{2\diamonds}
-One of the following \orange{11G10}:
+One of the following \orange{7C1(a) \& (b)(iv)}:
 \begin{itemize}
 \item Weak (5--9) with \hearts (usually 6 cards)
 \item Weak (5--9) with \spades \& \clubs, 5--4 or better 
-\item Game forcing (3 losers) with \spades \& \clubs, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with \spades \& \clubs, 5--4 or better
 \end{itemize}
 
 \paragraph{2\hearts}
-One of the following \orange{11G10}:
+One of the following \orange{7C1(a) \& (b)(iv)}:
 \begin{itemize}
 \item Weak (5--9) with \spades (usually 6 cards)
-\item Weak (5--9) with \clubs \& \diamonds, 4--4 or better (usually 5--4)
-\item Game forcing (3 losers) with \clubs \& \diamonds, 4--4 or better (usually 5--4)
+\item Weak (5--9) with \clubs \& \diamonds, 5--4 or better
+\item Game forcing (3 losers) with \clubs \& \diamonds, 5--4 or better
 \end{itemize}
 
 \paragraph{2\spades}
-One of the following \orange{11G10}:
+One of the following \orange{7C1(a) \& (b)(iv)}:
 \begin{itemize}
 \item Weak (5--9) with \clubs (usually 7 cards)
-\item Weak (5--9) with \hearts \& one of the minors, 4--4 or better (usually 5--4)
-\item Game forcing (3 losers) with \hearts \& one of the minors, 4--4 or better (usually 5--4)
+\item Weak (5--9) with \hearts \& one of the minors, 5--4 or better
+\item Game forcing (3 losers) with \hearts \& one of the minors, 5--4 or better 
 \end{itemize}
 
 \paragraph{2NT}
-One of the following \orange{11H8}:
+One of the following \orange{7C1(a) \& (b)(iv)}:
 \begin{itemize}
-\item Weak (5--9) with \spades \& \diamonds, 4--4 or better (usually 5--4)
-\item Game forcing (3 losers) with \spades \& \diamonds, 4--4 or better (usually 5--4)
+\item Weak (5--9) with \spades \& \diamonds, 5--4 or better
+\item Game forcing (3 losers) with \spades \& \diamonds, 5--4 or better
 \item 24+ (Game forcing) balanced hands
 \end{itemize}
 
@@ -153,16 +153,16 @@ Typically seven cards, they may be occasionally a good six (particularly at
 favourable vulnerability) or a bad eight.
 
 \begin{itemize}
-\item 3\clubs - 7 card preempt or GF in diamonds \orange{11J8(a)}
-\item 3\diamonds - 7 card preempt or GF in hearts \orange{11J8(a)}
-\item 3\hearts - 7 card preempt or GF in spades \orange{11J8(a)}
+\item 3\clubs - GF clubs or 7 card preempt in diamonds \orange{7D}
+\item 3\diamonds - GF clubs or 7 card preempt in hearts \orange{7D}
+\item 3\hearts - GF clubs or 7 card preempt in spades \orange{7D}
 \end{itemize}
 
 \paragraph{3\spades}
 
-Gambling 3NT~\orange{11J8(d)}. 
+GF spades or Gambling 3NT~\orange{7D}. 
 
-Shows a solid seven or eight card minor suit and nothing outside better than a
+In the Gambling case it shows a solid seven or eight card minor suit and nothing outside better than a
 queen.  Solid in this case is defined as 60\% likely to run given all
 distributions of cards in the other hands. The following suits are all
 considered to be solid:
@@ -175,16 +175,15 @@ considered to be solid:
 
 \paragraph{3NT}
 
-Shows a 4-level preempt in either minor or a 3 loser hand with
-clubs~\orange{11K3(d)}. Usually eight cards. 
+Shows a 4-level preempt in either minor~\orange{7D}. Usually eight cards. 
 
 \paragraph{4-level suit openings}
 
 We play Namyats, so:
 
 \begin{itemize}
-\item 4\clubs - Strong 4-level bid in hearts~\orange{11L3}
-\item 4\diamonds - Strong 4-level bid in spades~\orange{11L3}
+\item 4\clubs - Strong 4-level bid in hearts~\orange{7D}
+\item 4\diamonds - Strong 4-level bid in spades~\orange{7D}
 \item 4\hearts - Purely preemptive 4-level bid in hearts
 \item 4\spades - Purely preemptive 4-level bid in spades
 \end{itemize}
