--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -60,7 +60,7 @@
 \subsection{Notation}
 \label{sec:notation}
 
-References to the EBU Orange Book will be given as \orange{11C3}. References
+References to the EBU Blue Book will be given as \orange{7A1}. References
 elsewhere in this document will be given as \xref{sec:resp:2level}.
 
 \subsection{System regulation}
@@ -68,11 +68,11 @@ elsewhere in this document will be given as \xref{sec:resp:2level}.
 Allowed systems are determined by the Regulating Authority for a given event.
 This system is primarily played under the auspices of the English Bridge Union
 who have recently split the highest level into Level 4 and Level 5. The
-majority of this system is allowed at Level 4 \orange{9B}, which is the
+majority of this system is allowed at Level 4 \orange{7}, which is the
 standard tournament level in England. The major suit openings are only allowed
-at Level 5 \orange{9F} (given in {\it italics}) and hence alternatives are
+at Level 5 \orange{9} (given in {\it italics}) and hence alternatives are
 provided for Level 4 events (given in {\color{CadetBlue}grey}).  Events not
-directly run by the EBU may have other restrictions.  References to the Orange
+directly run by the EBU may have other restrictions.  References to the Blue
 Book sections allowing each convention at Level 4 or 5 are given throughout the
 document.
 
@@ -83,10 +83,10 @@ Conventions. Thus, it is not legal in Category 3 WBF events and in Category 2
 events the card with suggested defences and appropriate forms must be submitted
 in advance. Suggested defences are given in Appendix \ref{appx:defences}.
 
-\subsubsection{EBU Level 3 / WBF Category 3 variation}
+\subsubsection{WBF Category 3 variation}
 
-Modifications to the system to be permitted at both EBU Level 3 and WBF
-Category 3 events (as a Red system) are provided in Section \ref{sec:level3}.
+Modifications to the system to be permitted at WBF Category 3 events (as a Red
+system) are provided in Section \ref{sec:cat3}.
 
 \newpage
 
@@ -117,7 +117,7 @@ Opening bids at the 1 level are 10--15. The lower limit is usually governed by
 the rule of 19 as much as the actual point count and some good 15 point hands
 may be upgraded to a 1\diamonds opening. Losing trick count is also 
 useful for deciding when to upgrade. Upgraded hands will, obviously, meet the
-extended rule of 25 in all cases. \orange{10B4}
+extended rule of 25 in all cases. \orange{5C3}
 
 Weak opening and overcalling hands have nominal point counts associated with
 them but are likely to be wider ranging in third and weaker at favourable
@@ -641,13 +641,11 @@ weak takeout.
 		\begin{itemize}
 		\item Pass = weak clubs
 		\item Diamonds = weak diamonds
-		\item Others = GF clubs
 		\end{itemize}
 	\item 4\diamonds = enquiry
 		\begin{itemize}
 		\item 4\hearts = clubs
 		\item 4\spades = diamonds
-		\item 4NT = GF clubs
 		\end{itemize}
 	\end{itemize}
 
@@ -1154,16 +1152,16 @@ Therefore, we have a fairly natural overcall style.
 \subsubsection{Simple overcalls}
 \label{note:11}
 Simple overcalls are constructive and natural 5 cards, starting at
-10HCP~\orange{11N2}. A responsive cue is a good raise and
+10HCP~\orange{7E2}. A responsive cue is a good raise and
 direct raises are preemptive.
 
 \subsubsection{Double}
-Double is standard takeout (or a strong hand)~\orange{11N3}. After a double and
+Double is standard takeout (or a strong hand)~\orange{7E2}. After a double and
 a response, a cue by the doubler is a general force, not suit agreeing.
 
 \subsubsection{NT overcall}
 Direct 1NT is 15-17 balanced with a stop or semi-balanced and may contain a
-singleton ace~\orange{11N8}, protective 1NT is 11-14 with a stop.  After these
+singleton ace~\orange{7E3}, protective 1NT is 11-14 with a stop.  After these
 ``Continuations after 1NT''~\xref{sec:resp:1n} apply, with the exception that
 after the auction (1x)-1N-(2y), 2x is stayman without a stop if available.
 Other bids are lebensohl \xref{sec:resp:lebensohl}.
@@ -1174,17 +1172,17 @@ and enough to make a simple overcall. In protective they are intermediate
 (11-15, reasonable 6+ card suit). This also applies after the sequence (Pass)-Pass-(1N).
 
 \subsubsection{Jump cue bids}
-Jump cuebids are stopper-asking for 3NT \orange{11N18}; they promise a long
-running suit.  An overcall of 3NT promises a long running suit and a stopper.
+Jump cuebids are stopper-asking for 3NT \orange{7E2}; they promise a long
+running suit.  An overcall of 3NT promises a long running suit and a stopper~\orange{?}.
 Responses are the same as a gambling 3NT opening~\xref{sec:resp:higher}.
 
 \subsubsection{2-suited overcalls}
 
 Simple cuebids are Michaels showing at least 5--5 in the majors (over a minor)
-or the other major and either minor (over a major) \orange{11N7}. In all cases they are
+or the other major and either minor (over a major) \orange{7E2}. In all cases they are
 either weak or strong. Similarly, 2NT over a 1 level bid is unusual, showing
 5--5 or better in the minors (over a major) or the other minor and either major
-(over a minor) \orange{11N7}. Again, it's weak or strong.
+(over a minor) \orange{7E2}. Again, it's weak or strong.
 
 After Michaels or Unusual, bidding any of the suits which could have been shown
 is pass or correct at that level. Overcaller then corrects to the next highest
@@ -1344,7 +1342,7 @@ in hearts.
 \label{sec:def:1n}
 
 Suction, constructive values. Double is for penalties, which may be based on 7
-top tricks, and 2N shows a non-touching two suiter. \orange{11P7}
+top tricks, and 2N shows a non-touching two suiter. \orange{7E1}
 
 After a direct penalty double, passes are forcing until we've bid or doubled
 them.  Doubles are for penalties. In passout seat after they have escaped to
@@ -1355,7 +1353,7 @@ is in effect, eg: (1N)-X-(2x)-P-(P)-2N
 \label{sec:def:strong}
 
 Suction, weak. Double shows the suction bid in their suit and 2N shows a
-non-touching two suiter. \orange{11M2}
+non-touching two suiter. \orange{7E1}
 
 \subsubsection{Short suits}
 \label{sec:def:short}
@@ -1367,7 +1365,7 @@ defences in Section~\ref{sec:def:1x} apply.
 \label{sec:def:phoney}
 
 Suction, constructive values. Double shows the suction bid in their suit and 2N
-is natural. \orange{11M2}
+is natural. \orange{7E1}
 
 \subsubsection{Multi 2\diamonds}
 \label{sec:def:multi}
@@ -1751,12 +1749,13 @@ even numbers, four odd numbers or two of each.
 \newpage
 
 \section{Conventions for lower-level events}
-\label{sec:level3}
+\label{sec:cat3}
 
-Sometimes it is neccessary to play at EBU level 3 or WBF category 3 events. In
-those cases, it is not permitted to play the system as described above. The
-treatments restricted at lower levels are the two and three level openings, 
-although this also has minor differences to other bids.
+Sometimes it is neccessary to play at WBF category 3 events or other venues
+more restrictive than EBU Level 4. In those cases, it is not permitted to play
+the system as described above. The treatments restricted at lower levels are
+the two and three level openings, although this also has minor differences to
+other bids.
 
 \subsection{1 diamond}
 
