--- a/defines.tex
+++ b/defines.tex
@@ -14,7 +14,7 @@
 }
 
 
-\newcommand{\orange}[1]{[OB #1]}
+\newcommand{\orange}[1]{[BB #1]}
 \newcommand{\xref}[1]{[\ref{#1}]}
 
 \newcommand{\hearts}{\textcolor{Red}{$\varheartsuit$}~}
