update system notes

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -19,7 +19,7 @@
   pdfauthor={Matthew Johnson and Henry Lockwood}]{hyperref}
 
 \author{Matthew Johnson\\Henry Lockwood}
-\title{System notes on Pascal's Encrypted Club}
+\title{System notes on Pascal}
 
 \input{defines}
 
@@ -33,13 +33,11 @@
 1. & 2NT good raise & \pageref{note:1} \\
 2. & Jump fit & \pageref{note:2} \\
 3. & 3NT good raise & \pageref{note:3} \\
-4. & 1M--2M good raise & \pageref{note:4} \\
-5. & 1H--1S & \pageref{note:5} \\
 6. & splinter & \pageref{note:6} \\
 7. & 2\clubs 5-card puppet Keri & \pageref{note:7} \\
 8. & 3\clubs 5-card puppet Stayman & \pageref{note:8} \\
 9. & Responses to a natural 1NT & \pageref{note:9} \\
-10. & 2NT--3\spades/3NT & \pageref{note:10} \\
+10. & Responses to a natural 2NT & \pageref{note:10} \\
 11. & UCB & \pageref{note:11} \\
 12. & Lebensohl & \pageref{note:12} \\
 13. & Responses to 1\clubs & \pageref{note:13} \\
@@ -1589,6 +1587,22 @@ Responses:
 	\end{itemize}
 \end{itemize}
 }
+
+{\color{CadetBlue}
+\begin{itemize}
+\item 1\hearts/\spades-(X) (Level 4):
+	\begin{itemize}
+	\item Pass = 0-2 card support, bad hand, NF
+	\item XX = 0-2 card support, good hand, no specific suit to bid or strong enough to force, F1
+	\item 1N = 3 card support, good values, F1
+	\item 2M (raise) = 3 card support, poor values, NF
+	\item 3M (raise) = 4 card support, poor values, NF
+	\item Other raises as without the double, F1 or GF
+	\item Other new suits = 0-2 card support, focussed suit, NF
+	\end{itemize}
+\end{itemize}
+}
+
 \begin{itemize}
 \item 1\hearts/\spades-(2x):
 	\begin{itemize}
