System updates for latest blue book

--- a/openings.tex
+++ b/openings.tex
@@ -9,7 +9,7 @@ Responses in Section \ref{sec:resp:1level}.
 
 \paragraph{1\clubs}
 
-One of the following \orange{7B1(i)}:
+One of the following \orange{7B1(i)} announced as "May be zero" \orange{4D1}
 
 \begin{itemize}
 \item (1\textsuperscript{st}/2\textsuperscript{nd} non-vul) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
@@ -20,7 +20,7 @@ One of the following \orange{7B1(i)}:
 
 \paragraph{1\diamonds}
 
-16+, not game forcing \orange{7B1(ii)}. 
+16+, not game forcing \orange{7B1(ii)} alerted \orange{4B1(a)}. 
 \begin{itemize}
 \item If balanced or semi-balanced then 16--19 (17--19 1/2 Vul). 
 \item If a two suiter (5422 or longer) or three suiter (4441 / 5440) then 16--GF. 
@@ -31,8 +31,10 @@ One of the following \orange{7B1(i)}:
 
 \paragraph{1\hearts~(Level 5)}
 
+Alerted \orange{4B1(a)}.
+
 \begin{itemize}
-\item 10--15 points, not balanced 4+ spades, may be longer hearts or a minor (possible canape), but will always have 5 spades or 4 hearts \orange{9A}.
+\item 10--15 points, not balanced 4+ spades, may be longer hearts or a minor (possible canape), but will always have 5 spades or 4 hearts \orange{8A}.
 \end{itemize}
 
 }
@@ -40,6 +42,8 @@ One of the following \orange{7B1(i)}:
 {\color{CadetBlue}
 
 \paragraph{1\hearts~(Level 4)}
+
+Alerted \orange{4H2(b)}.
 
 \begin{itemize}
 \item 10--15 points, not balanced, 4+ hearts, may contain a longer minor (possible canape) \orange{7B2}.
@@ -50,8 +54,10 @@ One of the following \orange{7B1(i)}:
 
 \paragraph{1\spades~(Level 5)}
 
+Alerted \orange{4B1(a)}.
+
 \begin{itemize}
-\item 10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{9A}, may have a longer minor (possible canape).
+\item 10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{8A}, may have a longer minor (possible canape).
 \end{itemize}
 
 }
@@ -60,6 +66,8 @@ One of the following \orange{7B1(i)}:
 
 \paragraph{1\spades~(Level 4)}
 
+Alerted \orange{4H2(b)}.
+
 \begin{itemize}
 \item 10--15 points, not balanced. 5+ spades \orange{7B2}, may have a longer minor (possible canape).
 \end{itemize}
@@ -67,16 +75,16 @@ One of the following \orange{7B1(i)}:
 
 \paragraph{1NT}
 
-Varies depending upon position and vulnerability \orange{5A5}
+Varies depending upon position and vulnerability \orange{5A5}. Announced with the points range, eg "9 to 11" \orange{4E1}.
 
 First or second seat non-vulnerable:
 \begin{itemize}
-\item 9--11 balanced \orange{7B3(i)}.
+	\item 9--11 balanced \orange{7B3(i) \& 7A3}.
 \end{itemize}
 
 Third seat non-vulnerable:
 \begin{itemize}
-\item 9--15 balanced \orange{7B3(i)}.
+	\item 9--15 balanced \orange{7B3(i) \& 7A3}.
 \end{itemize}
 
 First or second seat vulnerable:
@@ -100,8 +108,10 @@ Responses in Section \ref{sec:resp:2level}. Range in HCP for each weak option
 is given, but may be wider ranging in 3rd or favourable vulnerability and will
 be intermediate in 4th position (12--16).
 
+All of these are alerted \orange{4B1}.
+
 \paragraph{2\clubs}
-One of the following \orange{7C1(a) \& (b)(iv)}:
+One of the following \orange{7C1(b) \& (c)(v)}:
 \begin{itemize}
 \item Weak (5--9) with \diamonds (usually 6 cards)
 \item Weak (5--9) with \hearts \& \spades, 5--4 or better
@@ -110,7 +120,7 @@ One of the following \orange{7C1(a) \& (b)(iv)}:
 \end{itemize}
 
 \paragraph{2\diamonds}
-One of the following \orange{7C1(a) \& (b)(iv)}:
+One of the following \orange{7C1(b) \& (c)(v)}:
 \begin{itemize}
 \item Weak (5--9) with \hearts (usually 6 cards)
 \item Weak (5--9) with \spades \& \clubs, 5--4 or better 
@@ -118,7 +128,7 @@ One of the following \orange{7C1(a) \& (b)(iv)}:
 \end{itemize}
 
 \paragraph{2\hearts}
-One of the following \orange{7C1(a) \& (b)(iv)}:
+One of the following \orange{7C1(b) \& (c)(v)}:
 \begin{itemize}
 \item Weak (5--9) with \spades (usually 6 cards)
 \item Weak (5--9) with \clubs \& \diamonds, 5--4 or better
@@ -126,7 +136,7 @@ One of the following \orange{7C1(a) \& (b)(iv)}:
 \end{itemize}
 
 \paragraph{2\spades}
-One of the following \orange{7C1(a) \& (b)(iv)}:
+One of the following \orange{7C1(b) \& (c)(v)}:
 \begin{itemize}
 \item Weak (5--9) with \clubs (usually 7 cards)
 \item Weak (5--9) with \hearts \& one of the minors, 5--4 or better
@@ -134,7 +144,7 @@ One of the following \orange{7C1(a) \& (b)(iv)}:
 \end{itemize}
 
 \paragraph{2NT}
-One of the following \orange{7C1(a) \& (b)(iv)}:
+One of the following \orange{7C2}:
 \begin{itemize}
 \item Weak (5--9) with \spades \& \diamonds, 5--4 or better
 \item Game forcing (3 losers) with \spades \& \diamonds, 5--4 or better
@@ -151,6 +161,8 @@ Responses in Section \ref{sec:resp:higher}.
 Three level bids are transfers. Either weak preempts or a 3-loser hand.
 Typically seven cards, they may be occasionally a good six (particularly at
 favourable vulnerability) or a bad eight.
+
+All of these are alerted \orange{4B1}.
 
 \begin{itemize}
 \item 3\clubs - GF clubs or 7 card preempt in diamonds \orange{7D}
@@ -177,13 +189,15 @@ considered to be solid:
 
 Shows a 4-level preempt in either minor~\orange{7D}. Usually eight cards. 
 
+Alerted \orange{4B1}.
+
 \paragraph{4-level suit openings}
 
-We play Namyats, so:
+Namyats:
 
 \begin{itemize}
-\item 4\clubs - Strong 4-level bid in hearts~\orange{7D}
-\item 4\diamonds - Strong 4-level bid in spades~\orange{7D}
+\item 4\clubs - Strong 4-level bid in hearts~\orange{7D}. Alerted \orange{4B4(a)}.
+\item 4\diamonds - Strong 4-level bid in spades~\orange{7D}. Alerted \orange{4B4(a)}.
 \item 4\hearts - Purely preemptive 4-level bid in hearts
 \item 4\spades - Purely preemptive 4-level bid in spades
 \end{itemize}
@@ -192,7 +206,7 @@ Strong is defined as an 8--9 playing trick hand.
 
 \paragraph{4NT}
 
-Asks for specific aces~\orange{11L1}.
+Asks for specific aces~\orange{7D}. Not alerted.
 
 Will be bid with a hand missing at most two aces, or with a void. It must be happy playing at the six level opposite some responses and the seven level opposite some others.
 
