--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -473,9 +473,9 @@ weak takeout.
 		\item 3NT = 20-23 balanced
 			\begin{itemize}
          \item 4\clubs/\diamonds = 2 under transfers to \hearts/\spades
-         \item 4\hearts/\spades = Swiss for no trumps \xref{sec:swiss}
-         \item 4N = Quantitative
-         \item 5N = Quantitative (for 6 or 7)
+         \item 4\hearts = RKQG
+			\item 4\spades = either minor
+         \item 4N = both minors
 			\end{itemize}
 		\end{itemize}
 	\item 3\clubs = GF enquiry
@@ -588,9 +588,9 @@ weak takeout.
       \item A 3NT rebid shows 24+ balanced
 			\begin{itemize}
          \item 4\clubs/\diamonds = 2 under transfers to \hearts/\spades
-         \item 4\hearts/\spades = Swiss for no trumps \xref{sec:swiss}
-         \item 4N = Quantitative
-         \item 5N = Quantitative (for 6 or 7)
+         \item 4\hearts = RKQG
+			\item 4\spades = either minor
+         \item 4N = both minors
 			\end{itemize}
 		\end{itemize}
    \item 4\clubs/4\hearts = transfer preference; mixed raise.
@@ -927,7 +927,7 @@ Lebensohl:
          \item 4\hearts = with 4 hearts.
          \item 4\spades = with 4 spades.
 			\end{itemize}
-		\item 4\clubs/\diamonds = Swiss \xref{sec:swiss} for no-trumps
+		\item 4\clubs = RKQG
 		\end{itemize}
    \item 3NT denies 4 hearts or 3 spades
 	\end{itemize}
@@ -1129,6 +1129,8 @@ aces and quantatitive. Responses are:
 
 After 4\diamonds/\hearts, next step asks for quant, with 4NT denying
 and bidding kings or 6NT accepting.
+
+For RKQG sequences starting at higher bids, raise the responses appropriately.
 
 \subsection{Viscount}
 \label{sec:viscount}
